syntax = "proto3";

package NDTS.NTabasco;

import "storage_client.proto";

message TBuildDataBaseConfig {
    string dbname = 1;
    string user = 2;
    string password = 3;
    string hostaddr = 4;
    string port = 5;
}